feat: implement endpoints for get all availabletag and requesttag
