# src/main/java/com/matchmate/tagsmanagementservice/domain/models/tag/Tag.java
@@ -1,23 +1,25 @@
 package com.matchmate.tagsmanagementservice.domain.models.tag;
 
-import static com.matchmate.tagsmanagementservice.common.AssertionConcern.assertArgumentNotBlank;
 import com.matchmate.tagsmanagementservice.common.domain.Aggregate;
-import com.matchmate.tagsmanagementservice.domain.enums.TagStatus;
+import com.matchmate.tagsmanagementservice.domain.enums.TagStatusEnum;
 import com.matchmate.tagsmanagementservice.domain.events.TagRegisteredEvent;
 import lombok.Getter;
+
+import static com.matchmate.tagsmanagementservice.common.AssertionConcern.assertArgumentNotBlank;
 
 @Getter
 public class Tag extends Aggregate<TagId> {
     private final String name;
-    private TagStatus status;
+    private TagStatusEnum status;
 
     public Tag(String name) {
         super(new TagId());
         assertArgumentNotBlank(name, "tag name must not be blank.");
         this.name = name;
+        this.status = TagStatusEnum.CREATED;
     }
 
-    public Tag(String name, TagStatus status) {
+    public Tag(String name, TagStatusEnum status) {
         super(new TagId());
 
         assertArgumentNotBlank(name, "tag name must not be blank.");
@@ -27,7 +29,7 @@ public class Tag extends Aggregate<TagId> {
     }
 
     public void register() {
-        this.status = TagStatus.CREATED;
+        this.status = TagStatusEnum.CREATED;
         this.notify(new TagRegisteredEvent(this.name));
     }
 }
